[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-rrsp-toolkit"
version = "1.0.0"
description = "Graph-state phase encoding, phase-noise, loss, and R-RSP analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "scipy>=1.10",
]

[project.scripts]
graph-rrsp-toolkit = "graph_rrsp_toolkit.main:main"

[tool.setuptools]
packages = ["graph_rrsp_toolkit"]
package-dir = {graph_rrsp_toolkit = "."}
